@@ -230,9 +230,9 @@ OBJEXT = o
 PACKAGE = photoprint
 PACKAGE_BUGREPORT = blackfive@fakenhamweb.co.uk
 PACKAGE_NAME = photoprint
-PACKAGE_STRING = photoprint 0.4.0-pre3
+PACKAGE_STRING = photoprint 0.4.0-pre4
 PACKAGE_TARNAME = photoprint
-PACKAGE_VERSION = 0.4.0-pre3
+PACKAGE_VERSION = 0.4.0-pre4
 PATH_SEPARATOR = :
 PKG_CONFIG = /usr/bin/pkg-config
 POSUB = po
@@ -243,7 +243,7 @@ SHELL = /bin/bash
 STRIP = strip
 TIFF_LIBS = -ltiff
 USE_NLS = yes
-VERSION = 0.4.0-pre3
+VERSION = 0.4.0-pre4
 XGETTEXT = /usr/bin/xgettext
 XGETTEXT_015 = /usr/bin/xgettext
 XGETTEXT_EXTRA_OPTIONS = 
