@@ -117,19 +117,19 @@
 #define PACKAGE_NAME "photoprint"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "photoprint 0.4.0-pre3"
+#define PACKAGE_STRING "photoprint 0.4.0-pre4"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "photoprint"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "0.4.0-pre3"
+#define PACKAGE_VERSION "0.4.0-pre4"
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "0.4.0-pre3"
+#define VERSION "0.4.0-pre4"
 
 /* Define to empty if `const' does not conform to ANSI C. */
 /* #undef const */
